# agar.ai

./: .gitignore  CMakeLists.txt  README.md
src/: Bubble.cpp  Bubble.h  CMakeLists.txt  CowardHunterStrategy.cpp  CowardHunterStrategy.h  GameManager.cpp  GameManager.h  HunterStrategy.cpp  HunterStrategy.h  IBubbleControlStrategy.h  IRenderableObject.h  Matrices.cpp  Matrices.h  RandomStrategy.cpp  RandomStrategy.h  RenderEngine.cpp  RenderEngine.h  main.cpp  utils.h
src/graphics/: IRenderableObject.h  Matrices.cpp
src/main/: main.cpp  utils.h
src/main/agar/: Bubble.cpp  Bubble.h  GameManager.cpp  GameManager.h  IBubbleControlStrategy.h  RenderableBubble.cpp  RenderableBubble.h
src/main/agar/brain/: Brain.cpp  Brain.h  DecisionContext.h  SensorImpl.cpp  SensorImpl.h
src/main/agar/strategies/: CowardHunterStrategy.cpp  CowardHunterStrategy.h  HunterStrategy.cpp  HunterStrategy.h  RandomStrategy.cpp  RandomStrategy.h
src/main/agar/strategies/brain/: BrainStrategy.cpp  BrainStrategy.h  SensorImpl.cpp  SensorImpl.h
src/main/agar/strategies/brain/sensor/: SensorImpl.cpp  SensorImpl.h
src/main/ai/: Action.cpp  Action.h  Gene.cpp  Gene.h  Genome.cpp  Genome.h  NeuralNet.cpp  NeuralNet.h  Params.h  Sensor.cpp  Sensor.h
src/main/graphics/: IRenderEngine.h  Matrices.h  RenderEngine.cpp  RenderEngine.h
src/strategies/: CowardHunterStrategy.cpp  CowardHunterStrategy.h  HunterStrategy.cpp  HunterStrategy.h  RandomStrategy.cpp
src/test/agar/strategies/brain/: SensorImpl_test.cpp
src/test/agar/strategies/brain/sensor/: SensorImpl_test.cpp
tools/: graph-nnet.py
